sea-query-attr/tests/compile-fail/unknown_field.stderr
error: Unknown field: `unknown_field`
 --> tests/compile-fail/unknown_field.rs:3:12
  |
3 | #[enum_def(unknown_field)]
  |            ^^^^^^^^^^^^^
